--- a/test/form.html
+++ b/test/form.html
@@ -77,11 +77,11 @@
                 //     }
                 // });
                 //
-                BreadButter.widgets.signIn('breadbutter4', {
-                    email_address: 'test@breadbutter.com',
-                    mode: BreadButter.mode.RESET_PASSWORD,
-                    pin: 1234
-                });
+                // BreadButter.widgets.signIn('breadbutter4', {
+                //     email_address: 'test@breadbutter.com',
+                //     mode: BreadButter.mode.RESET_PASSWORD,
+                //     pin: 1234
+                // });
                 // BreadButter.widgets.signIn('breadbutter5');
                 // //
                 // BreadButter.widgets.signIn('breadbutter6', { mode: BreadButter.mode.CONFIRM_EMAIL,
@@ -230,7 +230,6 @@
                     bottom: 20,
                     left: 20
                 }
-                continueLeft: 20
             });
         });
         document.getElementById('bottom-right').addEventListener('click', function(){
